run jqm enhanceWithin on the afterRender step of the Ember run loop, fixes flickering on page transitions

--- a/src/mist/io/static/css/backend_add.css
+++ b/src/mist/io/static/css/backend_add.css
@@ -29,7 +29,6 @@
 
 .mist-select.ui-collapsible-collapsed + div#backend-add-fields {
     display: block !important;
-    border-radius: 0 0 .5em .5em;
 }
 
 #backend-add-fields .ui-listview {
