--- a/src/mist/io/static/css/providers.css
+++ b/src/mist/io/static/css/providers.css
@@ -24,7 +24,7 @@
     height: 50px;
     width: 50px;
     position: relative;
-    left: -19px;
+    left: -23px;
     transform: scale(0.4, 0.4);
     -webkit-transform: scale(0.4,0.4);
     bottom: 15px;
